--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "appwrite": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
