--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.3",
     "appwrite": "^11.0.0",
+    "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.7",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
